- "dpanel" and "arbond" commands: indicate in the model printout 
  if the AR, Sargan or Wald tests failed
- "gnuplot" command: add a --with-lp option to use linespoints
- "modtest" command: support the autocorrelation option for ARMA
  models, using the Ljung-Box statistic
- "boxplot" command: add a --matrix option (works in the same way
  as with the "gnuplot" command)
- Add three new functions: ghk(), halton() and isnan()
- Add two new accessors: $pi and $huge
- Fix for ARMA forecasts: ensure that the dynamic portion starts
  as soon as possible when the --dynamic option is given
- Switch to using libcurl for HTTP transaction support
- Add two new element-wise matrix operators, ".>=" and ".<=",
  (greater than or equal, less than or equal)
- Fix some buggy behavior in regard to empty matrices
- Fix for use of "catch" (to trap errors) in loops
- Allow passing "null" as an argument for lists in user-defined
  functions
- Enable indexing into named lists to get the ID numbers of series
- Bivariate normal cdf: switch from Drezner(78) to a faster and
  more robust algorithm
- randgen() function, gamma distribution option: switch to the fast
  Marsaglia-Tsang generator for gamma variates
- Fix bivariate normal cdf calculator (would return NAs in some
  pathological cases)
- GUI: add check for updated addons, such as gig
- GUI icon view: enable copying of graphs and matrices
- GUI graphs: in saving as PDF, remember the user's choice of font
  size for the duration of the session
- MS Windows build: work around problems associated with the
  "Virtual Store" folder-redirection introduced in Windows Vista
- Linux: add proper XDG support (mime types, icons)
- OS X package: update the gmp, mpfr and fftw libraries

2012-06-01 version 1.9.9
- Add --cluster option (cluster-robust standard errors) for several
  estimators; see the User's Guide for details
- Add (limited) support for Stata under the "foreign" command