@@ -14,6 +14,8 @@ Version 1.9.10, in progress
   models, using the Ljung-Box statistic
 - "boxplot" command: add a --matrix option (works in the same way
   as with the "gnuplot" command)
+- "freq" command: add a --matrix option to select a column from a
+  named matrix instead of a series
 - Add three new functions: ghk(), halton() and isnan()
 - Add two new accessors: $pi and $huge
 - Fix for ARMA forecasts: ensure that the dynamic portion starts
